Add basic structure to index.html
Added header, footer and content divs, where everything has placeholder
text. Content is made up of several parts:
- An introduction to the app
- Information about what it can do
- User reviews
- Links to download sources

--- a/index.html
+++ b/index.html
@@ -8,6 +8,73 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    
+    <div class="header">
+        <div class="header-logo">Reels Blocker</div>
+        <ul class="header-links">
+            <li><a href="">About</a></li>
+            <li><a href="">Contact</a></li>
+        </ul>
+    </div>
+
+    <div class="content">
+        <div class="introduction">
+            <div class="introduction-text">
+                <h1>Do you spend too much time endlessly scrolling reels?</h1>
+                <p>Reels are a huge part of both Instagram, Snapchat, TikTok and Facebook. If you want to get rid of you addiction and spend time on things that matter, download Reels Blocker today!</p>
+            </div>
+            <div class="app-store-links">
+                <a href=""><img>App store</a>
+                <a href=""><img>Google play</a>
+            </div>
+        </div>
+        <div class="information">
+            <h2>What does Reels Blocker do?</h2>
+            <p>Options to turn off Reels for different apps:</p>
+            <div class="social-media-icons">
+                <div class="instagram">
+                    <img class="icon">
+                    <ul class="features">
+                        <li>Feature 1</li>
+                        <li>Feature 2</li>
+                    </ul>
+                </div>
+                <div class="snapchat">
+                    <img class="icon">
+                    <ul class="features">
+                        <li>Feature 1</li>
+                        <li>Feature 2</li>
+                    </ul>
+                </div>
+                <div class="tiktok">
+                    <img class="icon">
+                    <ul class="features">
+                        <li>Feature 1</li>
+                        <li>Feature 2</li>
+                    </ul>
+                </div>
+                <div class="facebook">
+                    <img class="icon">
+                    <ul class="features">
+                        <li>Feature 1</li>
+                        <li>Feature 2</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="reviews">
+            <div>
+                <p class="review-text"><i>I used to scroll reels for several hours every day. After installing Reels Blocker, I have gotten more time for working out and spending time with friends!</i></p>
+                <p class="review-user">-Fake Person, To show an example</p>
+            </div>
+        </div>
+        <div class="app-store-links">
+            <a href=""><img>App store</a>
+            <a href=""><img>Google play</a>
+        </div>
+    </div>
+
+    <div class="footer">
+        <a href="https://github.com/Studsministern">Made by Eric Weidow</a>
+    </div>
 </body>
 </html>
