Change app-store images to buttons

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
                 <p>Reels are a huge part of both Instagram, Snapchat, TikTok and Facebook. If you want to get rid of you addiction and spend time on things that matter, download Reels Blocker today!</p>
             </div>
             <div class="app-store-links">
-                <a href=""><img>App store</a>
-                <a href=""><img>Google play</a>
+                <button href="">App store</butt>
+                <button href="">Google play</button>
             </div>
         </div>
         <div class="information">
@@ -68,8 +68,8 @@
             </div>
         </div>
         <div class="app-store-links">
-            <a href=""><img>App store</a>
-            <a href=""><img>Google play</a>
+            <button href="">App store</butt>
+            <button href="">Google play</button>
         </div>
     </div>
 
