Change structure of index.html
- Moved out divs from content class to allow the same padding being
applied to each new element on the page.
- Removed paragraph in information.
- Removed italics from HTML document, uses css formatting instead.

--- a/index.html
+++ b/index.html
@@ -16,57 +16,60 @@
         </ul>
     </div>
 
-    <div class="content">
-        <div class="introduction">
-            <div class="introduction-text">
-                <h1>Do you spend too much time endlessly scrolling reels?</h1>
-                <p>Reels are a huge part of both Instagram, Snapchat, TikTok and Facebook. If you want to get rid of you addiction and spend time on things that matter, download Reels Blocker today!</p>
+    <div class="introduction">
+        <div class="introduction-text">
+            <h1>Do you spend too much time endlessly scrolling reels?</h1>
+            <p>Reels are a huge part of both Instagram, Snapchat, TikTok and Facebook. If you want to get rid of you addiction and spend time on things that matter, download Reels Blocker today!</p>
+        </div>
+        <div class="app-store-links">
+            <button href="">App store</butt>
+            <button href="">Google play</button>
+        </div>
+    </div>
+
+    <div class="information">
+        <h1>What does Reels Blocker do?</h1>
+        <div class="social-media-icons">
+            <div class="instagram">
+                <img class="icon">
+                <ul class="features">
+                    <li>Feature 1</li>
+                    <li>Feature 2</li>
+                </ul>
             </div>
-            <div class="app-store-links">
-                <button href="">App store</butt>
-                <button href="">Google play</button>
+            <div class="snapchat">
+                <img class="icon">
+                <ul class="features">
+                    <li>Feature 1</li>
+                    <li>Feature 2</li>
+                </ul>
+            </div>
+            <div class="tiktok">
+                <img class="icon">
+                <ul class="features">
+                    <li>Feature 1</li>
+                    <li>Feature 2</li>
+                </ul>
+            </div>
+            <div class="facebook">
+                <img class="icon">
+                <ul class="features">
+                    <li>Feature 1</li>
+                    <li>Feature 2</li>
+                </ul>
             </div>
         </div>
-        <div class="information">
-            <h2>What does Reels Blocker do?</h2>
-            <p>Options to turn off Reels for different apps:</p>
-            <div class="social-media-icons">
-                <div class="instagram">
-                    <img class="icon">
-                    <ul class="features">
-                        <li>Feature 1</li>
-                        <li>Feature 2</li>
-                    </ul>
-                </div>
-                <div class="snapchat">
-                    <img class="icon">
-                    <ul class="features">
-                        <li>Feature 1</li>
-                        <li>Feature 2</li>
-                    </ul>
-                </div>
-                <div class="tiktok">
-                    <img class="icon">
-                    <ul class="features">
-                        <li>Feature 1</li>
-                        <li>Feature 2</li>
-                    </ul>
-                </div>
-                <div class="facebook">
-                    <img class="icon">
-                    <ul class="features">
-                        <li>Feature 1</li>
-                        <li>Feature 2</li>
-                    </ul>
-                </div>
-            </div>
+    </div>
+
+    <div class="reviews">
+        <div class="review-box">
+            <p class="review-text">I used to scroll reels for several hours every day. After installing Reels Blocker, I have gotten more time for working out and spending time with friends!</p>
+            <p class="review-user">-Fake Person, To show an example</p>
         </div>
-        <div class="reviews">
-            <div>
-                <p class="review-text"><i>I used to scroll reels for several hours every day. After installing Reels Blocker, I have gotten more time for working out and spending time with friends!</i></p>
-                <p class="review-user">-Fake Person, To show an example</p>
-            </div>
-        </div>
+    </div>
+
+    <div class="downloads">
+        <h1>Download now:</h1>
         <div class="app-store-links">
             <button href="">App store</butt>
             <button href="">Google play</button>
